# quick-move

./: .gitignore  CHANGELOG.md  README.md  cspell.json  ideas.md  link_cli_globally.sh  name-brainstorm.md  pyrightconfig.json  requirements.txt  run_qt_designer.sh  setup.cfg
src/quick_move/: __init__.py  __main__.py  about_window.ui  completer.py  desktop_automation.py  dynamic_comment.py  helpers.py  main.py  main_window.py  main_window.ui  quick_move.ahk  recent_move_dialog.ui
tests/: accept.py  conftest.py  test_accept.py  test_completer.py  test_helpers.py
