[metadata]
name = quick-move
version = 0.0.0
description = Utility to quickly move files
long_description = file: README.md
long_description_content_type = text/markdown
author = Isaiah Odhner
author_email = isaiahodhner@gmail.com
license = GPL-3.0
license_file = LICENSE.txt
license_files = LICENSE.txt
url = https://github.com/1j01/quick-move
project_urls =
    Source = https://github.com/1j01/quick-move
    Changelog = https://github.com/1j01/quick-move/blob/main/CHANGELOG.md
keywords = sort, sorting, organization, organizing, organize, catalog, cataloging, collection, collecting, search, searching, labels, labeling, tagging, tag, tags, qt, app, application, file management, files, separate, separation, separating, cataloger
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Environment :: MacOS X
    Environment :: X11 Applications :: Qt
    Environment :: Win32 (MS Windows)
    Programming Language :: Python :: 3.10
    Framework :: Pytest
    Natural Language :: English
    Typing :: Typed

[options]
install_requires =
    PyQt6==6.5.3
    keyboard==0.13.5
    pyperclip==1.9.0
[options.entry_points]
console_scripts =
    quick-move = quick_move.main:main
[options.package_data]
quick-move =
    *.qss
    *.ui
    *.ts
    *.qm
    *.png
    *.ico
    *.icns
    *.svg
